--- a/contact.html
+++ b/contact.html
@@ -2,14 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="description"
-      content="Zooply - A Unique App Landing Page Template"
-    />
-    <meta name="author" content="codeglamor" />
+    <meta name="description" content="E-Care Charity Foundation Responsive HTML Template" />
+    <meta name="author" content="codeglamour" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Zooply - A Unique App Landing Page Template</title>
-    <link rel="icon" href="assets/favicon/favicon.ico" />
+    <title>E-Care Charity Foundation Responsive HTML Template</title>
+  
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="assets/favicon/site.webmanifest">
+    <link rel="mask-icon" href="assets/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+  
     <link rel="stylesheet" href="assets/css/bootstrap.css" />
     <link rel="stylesheet" href="assets/css/owl.carousel.min.css" />
     <link rel="stylesheet" href="assets/css/owl.theme.default.min.css" />
@@ -581,17 +586,17 @@
                 </div>
                 <div class="col-lg-4 col-md-6">
                   <p>
-                    Copyright © 2021 Huruma. All Rights Reserved by
-                    <a href="#dfd" target="_blank"> EnvyTheme </a>
+                    Copyright © 2021 Codeglamour. All Rights Reserved by
+                    <a href="index.html"> E Care </a>
                   </p>
                 </div>
                 <div class="col-lg-4 col-md-6">
                   <ul>
                     <li>
-                      <a href="#fdfdf">Terms &amp; Conditions</a>
+                      <a href="#">Terms &amp; Conditions</a>
                     </li>
                     <li>
-                      <a href="#ffd">Privacy Policy</a>
+                      <a href="#">Privacy Policy</a>
                     </li>
                   </ul>
                 </div>
