--- a/donate.html
+++ b/donate.html
@@ -325,14 +325,14 @@
             <div class="single-footer-widget">
               <h3>Recent News</h3>
               <div class="footer-news">
-                <a href="single-blog.html">
+                <a href="blogs-detail.html">
                   <img src="assets/images/1.jpg" alt="image" />
                   <h4>Support about poverty to poor family</h4>
                   <span>Poor, 22 January</span>
                 </a>
               </div>
               <div class="footer-news">
-                <a href="single-blog.html">
+                <a href="blogs-detail.html">
                   <img src="assets/images/2.jpg" alt="image" />
                   <h4>Mostly suffered school Boys care</h4>
                   <span>Health, 24 February</span>
